--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 04:04:00 PM</p>
+    <p class="lastupdate">09/03/2020 04:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">99.8&#176;F</td>
+        <td class="data">100.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">99.8&#176;F</td>
+        <td class="data">100.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">99.8&#176;F</td>
+        <td class="data">100.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.8&#176;F</td>
+        <td class="data">54.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">21%</td>
+        <td class="data">22%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.867 inHg (-0.065)</td>
+        <td class="data">29.859 inHg (-0.070)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNW (338&#176;)</td>
+        <td class="data">2 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">101.9&#176;F</td>
+        <td class="data">100.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 1 hour, 17 minutes</td>
+      <td class="data">2 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 1 hour, 17 minutes</td>
+      <td class="data">2 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
