--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 04:14:00 PM</p>
+    <p class="lastupdate">09/03/2020 04:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">100.7&#176;F</td>
+        <td class="data">101.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">100.7&#176;F</td>
+        <td class="data">101.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">100.7&#176;F</td>
+        <td class="data">101.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.6&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.853 inHg (-0.076)</td>
+        <td class="data">29.854 inHg (-0.074)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NE (45&#176;)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">99.6&#176;F</td>
+        <td class="data">98.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:13:00 PM">
-            100.7</span><br/>
+          <span title="04:18:40 PM">
+            101.0</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:13:00 PM (Thursday)">
-            100.7</span><br/>
+          <span title="04:18:40 PM (Thursday)">
+            101.0</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:13:00 PM">
-            100.7</span><br/>
+          <span title="09/03/2020 04:18:40 PM">
+            101.0</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:13:00 PM" class="hival">
-            100.7</span>
+          <span title="04:18:40 PM" class="hival">
+            101.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:13:00 PM (Thursday)" class="hival">
-            100.7</span>
+          <span title="04:18:40 PM (Thursday)" class="hival">
+            101.0</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:13:00 PM" class="hival">
-            100.7</span>
+          <span title="09/03/2020 04:18:40 PM" class="hival">
+            101.0</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 1 hour, 27 minutes</td>
+      <td class="data">2 days, 1 hour, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 1 hour, 27 minutes</td>
+      <td class="data">2 days, 1 hour, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
