--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 04:19:00 PM</p>
+    <p class="lastupdate">09/03/2020 04:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.854 inHg (-0.074)</td>
+        <td class="data">29.848 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">98.0&#176;F</td>
+        <td class="data">96.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">31%</td>
       </tr>
     </tbody>
   </table>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="04:10:02 PM">
-            29.850</span>
+          <span title="04:23:02 PM">
+            29.848</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -317,8 +317,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/03/2020 04:10:02 PM">
-            29.850</span>
+          <span title="09/03/2020 04:23:02 PM">
+            29.848</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 1 hour, 32 minutes</td>
+      <td class="data">2 days, 1 hour, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 1 hour, 32 minutes</td>
+      <td class="data">2 days, 1 hour, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
