--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 04:24:00 PM</p>
+    <p class="lastupdate">09/03/2020 04:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">101.0&#176;F</td>
+        <td class="data">101.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">101.0&#176;F</td>
+        <td class="data">101.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">101.0&#176;F</td>
+        <td class="data">101.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.8&#176;F</td>
+        <td class="data">54.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.848 inHg (-0.077)</td>
+        <td class="data">29.849 inHg (-0.075)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">3 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">96.9&#176;F</td>
+        <td class="data">96.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:18:40 PM">
-            101.0</span><br/>
+          <span title="04:26:42 PM">
+            101.2</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:18:40 PM (Thursday)">
-            101.0</span><br/>
+          <span title="04:26:42 PM (Thursday)">
+            101.2</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:18:40 PM">
-            101.0</span><br/>
+          <span title="09/03/2020 04:26:42 PM">
+            101.2</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:18:40 PM" class="hival">
-            101.0</span>
+          <span title="04:26:42 PM" class="hival">
+            101.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:18:40 PM (Thursday)" class="hival">
-            101.0</span>
+          <span title="04:26:42 PM (Thursday)" class="hival">
+            101.2</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:18:40 PM" class="hival">
-            101.0</span>
+          <span title="09/03/2020 04:26:42 PM" class="hival">
+            101.2</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="06:37:07 AM">
             93</span><br/>
-          <span title="03:30:58 PM">
-            21</span>
+          <span title="04:25:38 PM">
+            20</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
             93</span><br/>
-          <span title="03:30:58 PM (Thursday)">
-            21</span>
+          <span title="04:25:38 PM (Thursday)">
+            20</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/03/2020 03:30:58 PM">
-            21</span>
+          <span title="09/03/2020 04:25:38 PM">
+            20</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="04:23:02 PM">
-            29.848</span>
+          <span title="04:24:02 PM">
+            29.847</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -317,8 +317,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/03/2020 04:23:02 PM">
-            29.848</span>
+          <span title="09/03/2020 04:24:02 PM">
+            29.847</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          160
+          159
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 1 hour, 37 minutes</td>
+      <td class="data">2 days, 1 hour, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 1 hour, 37 minutes</td>
+      <td class="data">2 days, 1 hour, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
