--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 04:29:00 PM</p>
+    <p class="lastupdate">09/03/2020 04:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.0&#176;F</td>
+        <td class="data">52.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">21%</td>
+        <td class="data">20%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.849 inHg (-0.075)</td>
+        <td class="data">29.844 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">96.5&#176;F</td>
+        <td class="data">96.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:26:42 PM">
-            101.2</span><br/>
+          <span title="04:32:30 PM">
+            101.3</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:26:42 PM (Thursday)">
-            101.2</span><br/>
+          <span title="04:32:30 PM (Thursday)">
+            101.3</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:26:42 PM">
-            101.2</span><br/>
+          <span title="09/03/2020 04:32:30 PM">
+            101.3</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:26:42 PM" class="hival">
-            101.2</span>
+          <span title="04:32:30 PM" class="hival">
+            101.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:26:42 PM (Thursday)" class="hival">
-            101.2</span>
+          <span title="04:32:30 PM (Thursday)" class="hival">
+            101.3</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:26:42 PM" class="hival">
-            101.2</span>
+          <span title="09/03/2020 04:32:30 PM" class="hival">
+            101.3</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="04:24:02 PM">
-            29.847</span>
+          <span title="04:33:02 PM">
+            29.844</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -317,8 +317,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/03/2020 04:24:02 PM">
-            29.847</span>
+          <span title="09/03/2020 04:33:02 PM">
+            29.844</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 1 hour, 42 minutes</td>
+      <td class="data">2 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 1 hour, 42 minutes</td>
+      <td class="data">2 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
