--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 04:39:00 PM</p>
+    <p class="lastupdate">09/03/2020 04:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">101.3&#176;F</td>
+        <td class="data">100.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">101.3&#176;F</td>
+        <td class="data">100.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">101.3&#176;F</td>
+        <td class="data">100.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.1&#176;F</td>
+        <td class="data">56.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">21%</td>
+        <td class="data">23%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">3 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">99.1&#176;F</td>
+        <td class="data">99.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
     </tbody>
   </table>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:32:30 PM">
-            101.3</span><br/>
+          <span title="04:40:23 PM">
+            101.5</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:32:30 PM (Thursday)">
-            101.3</span><br/>
+          <span title="04:40:23 PM (Thursday)">
+            101.5</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:32:30 PM">
-            101.3</span><br/>
+          <span title="09/03/2020 04:40:23 PM">
+            101.5</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:32:30 PM" class="hival">
-            101.3</span>
+          <span title="04:40:23 PM" class="hival">
+            101.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:32:30 PM (Thursday)" class="hival">
-            101.3</span>
+          <span title="04:40:23 PM (Thursday)" class="hival">
+            101.5</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:32:30 PM" class="hival">
-            101.3</span>
+          <span title="09/03/2020 04:40:23 PM" class="hival">
+            101.5</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="04:33:02 PM">
-            29.844</span>
+          <span title="04:39:03 PM">
+            29.838</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -317,8 +317,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/03/2020 04:33:02 PM">
-            29.844</span>
+          <span title="09/03/2020 04:39:03 PM">
+            29.838</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          159
+          160
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 1 hour, 52 minutes</td>
+      <td class="data">2 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 1 hour, 52 minutes</td>
+      <td class="data">2 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
